k8s/flask-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
spec:
  selector:
    matchLabels:
      greeting: flask-app
      version: one
  template:
    metadata:
      labels:
        greeting: flask-app
        version: one
    spec:
      containers:
      - name: flask-app
        image: "us-central1-docker.pkg.dev/tembici-sre/sre-docker-registry/flask-app:latest"
