k8s/flask-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-1
spec:
  type: ClusterIP
  selector:
    greeting: flask
    version: three
  ports:
  - protocol: TCP
    port: 1001
    targetPort: 1000
