k8s/hello-world-service-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-2
spec:
  type: ClusterIP
  selector:
    greeting: hello
    version: two
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
