k8s/service-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-1
spec:
  type: ClusterIP
  selector:
    greeting: hello
    version: one
  ports:
  - protocol: TCP
    port: 50000
    targetPort: 50000
