k8s/certificate-and-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: leosete-sre-apps-dev
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: gke-lb-ext-leosete-monitoring
  name: combined-ingress
  namespace: monitoring
spec:
  rules:
  - host: grafana.leosete-sre-devops.com
    http:
      paths:
      - backend:
          service:
            name: grafana
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: prometheus.leosete-sre-devops.com
    http:
      paths:
      - backend:
          service:
            name: prometheus-k8s
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - grafana.leosete-sre-devops.com
    - prometheus.leosete-sre-devops.com
    secretName: combined-cert
