k8s/deploy-dev-bkp.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    env: dev
  name: leosete-sre-apps-dev
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: flask-app
    env: dev
  name: flask-app
  namespace: leosete-sre-apps-dev
spec:
  ports:
  - name: flask
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: flask-app
    env: dev
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: flask-app
    env: dev
  name: flask-app
  namespace: leosete-sre-apps-dev
spec:
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: flask-app
      env: dev
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: flask-app
        env: dev
    spec:
      containers:
      - env:
        - name: TZ
          value: America/Sao_Paulo
        image: us-central1-docker.pkg.dev/projc-devops-sete/sre-docker-registry/flask-app
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/ping
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 25
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        name: flask-app
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/ping
            port: 8080
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 3
          timeoutSeconds: 2
        resources:
          limits:
            cpu: 100m
            memory: 200Mi
          requests:
            cpu: 50m
            memory: 100Mi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: gke-lb-ext-leosete-dev
    networking.gke.io/managed-certificates: flask-app-dev-cert
    # kubernetes.io/ingress.allow-http: "false" ## Only enable this, after the LB's creation
  labels:
    app: flask-app
    env: dev
  name: flask-app-dev-ext
  namespace: leosete-sre-apps-dev
spec:
  rules:
  - host: flask-app-dev.leosete-sre-devops.com
    http:
      paths:
      - backend:
          service:
            name: flask-app
            port:
              number: 8080
        path: /api/ping
        pathType: Prefix
