k8s/deploy-prd.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    env: prd
  name: tembici-sre-apps-prd
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: flask-app
    env: prd
  name: flask-app
  namespace: tembici-sre-apps-prd
spec:
  ports:
  - name: flask
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: flask-app
    env: prd
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: flask-app
    env: prd
  name: flask-app
  namespace: tembici-sre-apps-prd
spec:
  selector:
    matchLabels:
      app: flask-app
      env: prd
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: flask-app
        env: prd
    spec:
      containers:
      - env:
        - name: TZ
          value: America/Sao_Paulo
        image: us-central1-docker.pkg.dev/fork-project-teste/sre-docker-registry/flask-app:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/ping
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 25
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        name: flask-app
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/ping
            port: 8080
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 3
          timeoutSeconds: 2
        resources:
          limits:
            cpu: 100m
            memory: 200Mi
          requests:
            cpu: 50m
            memory: 100Mi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: gke-lb-ext-tembici-prd
    networking.gke.io/managed-certificates: prd-certs
    networking.gke.io/v1beta1.FrontendConfig: gke-https-redirect
  labels:
    app: flask-app
    env: prd
  name: flask-app-prd-ext
  namespace: tembici-sre-apps-prd
spec:
  rules:
  - host: flask-app-tembici-prd.fork-project-teste.com
    http:
      paths:
      - backend:
          service:
            name: flask-app
            port:
              number: 8080
        path: /api/ping
        pathType: Prefix
