k8s/flask-app-hlg.yaml
---
# Source: flask-app-tembici/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-tembici
  namespace: tembici-sre-apps-hlg
  labels:
    app.kubernetes.io/name: flask-app-tembici
    app.kubernetes.io/instance: flask-app
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: flask-app-tembici
    app.kubernetes.io/instance: flask-app
---
# Source: flask-app-tembici/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-tembici
  namespace: tembici-sre-apps-hlg
  labels:
    app.kubernetes.io/name: flask-app-tembici
    app.kubernetes.io/instance: flask-app
spec:
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: flask-app-tembici
      app.kubernetes.io/instance: flask-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: flask-app-tembici
        app.kubernetes.io/instance: flask-app
    spec:
      containers:
        - name: flask-app-tembici
          image: "us-central1-docker.pkg.dev/leosete-devops-4/sre-docker-registry/flask-app:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/ping
              port: 8080
            initialDelaySeconds: 25
            periodSeconds: 10
            timeoutSeconds: 2
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/ping
              port: 8080
            initialDelaySeconds: 25
            periodSeconds: 10
            timeoutSeconds: 2
            successThreshold: 3
          resources:
            limits:
              cpu: 100m
              memory: 200Mi
            requests:
              cpu: 50m
              memory: 100Mi
          volumeMounts:
                  - name: flask-app-tembici
                    mountPath: /app/config
      volumes:
      - name: flask-app-tembici
        configMap:
          name: flask-app-tembici
          
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        {}
      terminationGracePeriodSeconds: 30
      # nodeSelector:
      #   app: tembici-node-pool
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app-tembici-ext
  namespace: tembici-sre-apps-hlg
  labels:
    app.kubernetes.io/name: flask-app-tembici
    app.kubernetes.io/instance: flask-app
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: gke-lb-ext-tembici
    ingressclass.kubernetes.io/is-default-class: "true"
    # kubernetes.io/ingress.allow-http: "false" ## Only available after LB is fully programmed.
    # networking.gke.io/load-balancer-type: "Internal ## For Internal LBs
    # networking.gke.io/managed-certificates: managed-cert
spec:
  # tls:
  # - hosts:
  #     - flask-app-tembici-hlg.leosete7.com
    # secretName: my-tls-secret
  rules:
  - host: flask-app-tembici-hlg.leosete7.com
    http:
      paths:
      - path: /api/ping
        pathType: Prefix
        backend:
          service:
            name: flask-app-tembici
            port:
              number: 8080
---
# apiVersion: networking.gke.io/v1
# kind: ManagedCertificate
# metadata:
#   name: leosete7-com
#   namespace: tembici-sre-apps-hlg
# spec:
#   domains:
#     - leosete7.com
#     - www.leosete7.com
