k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-ingress
spec:
  defaultBackend:
    service:
      name: flask-app
      port:
        number: 8080
  rules:
  - http:
      paths:
      - path: /api/ping
        pathType: ImplementationSpecific
        backend:
          service:
            name: flask-app
            port:
              number: 8080
